@@ -1,3 +1,9 @@
+2005-12-12  Christian Kellner,,,  <gicmo@gnome.org>
+
+	reviewed by: <delete if not using a buddy>
+
+	* modules/http-neon-method.c: (http_get_file_info):
+
 2005-12-11  John McCutchan  <ttb@tentacle.dhs.org>
 
 	* modules/inotify-helper.c: Disable debug messages
